added vuetify, among many other changes.

--- a/src/App/Styles/index.scss
+++ b/src/App/Styles/index.scss
@@ -1,1 +1,4 @@
-@import "~./Variables/_globals.scss";
+@import "~./Variables/_colors.scss";
+@import "~./Variables/_numbers.scss";
+
+@import "~./Utils/mixins.scss";
